# PythonAutoData

./: readme.md  setup.cfg  setup.py
autodata/: __init__.py  autodata.py
tests/: test_autodata.py
