[metadata]
name = autodata
version = 0.1
#url = https://
author = Kenichiro SHII
author_email = shii4c@gmail.com
license = MIT
description = Auto allocation dict and list
#long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
packages = autodata
